# LLM_study

./: .gitignore  pyproject.toml
src/agents/: main.py  mcp.py  model.py
src/tools/: github.py
src/utils/: __init__.py
